--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,7 +8,7 @@ on:
 
   push:
     branches:
-    - master
+      - master
 
 jobs:
   generate:
@@ -21,9 +21,8 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: LuizGuilhes123
           outputs: dist/snake.svg?palette=github-dark
-
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
