--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,9 +2,9 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *"
 
-  workflow_dispatch:
+  workflow_dispatch: # permite executar manualmente a ação
 
   push:
     branches:
@@ -18,13 +18,21 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
+      # 1. Clonar o repositório completo com o histórico
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Clona todo o histórico do repositório
+
+      # 2. Gerar o arquivo snake.svg
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: LuizGuilhes123
-          outputs: dist/snake.svg?palette=github-dark
+          github_user_name: LuizGuilhes123 # Seu nome de usuário no GitHub
+          outputs: dist/snake.svg?palette=github-dark # Configura o estilo do snake.svg
 
-      - name: push snake.svg to the output branch
+      # 3. Publicar o arquivo snake.svg no branch "output"
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
